[package]
name = "plotters-imgui"
version = "0.1.0"
authors = ["Moritz Drexl <mdrexl@fastmail.fm>"]
edition = "2018"

[dependencies]
plotters-backend = "^0.3.*"
imgui = { git = "https://github.com/BrainiumLLC/imgui-rs", rev = "6de9a7d83dcf90d6260c3f74ecf9a129246bedf7" }
earcutr = { git = "https://github.com/dabreegster/earcutr", branch = "patch-1" }
